--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -22,16 +22,19 @@ a:hover {
   color: #535bf2;
 }
 
+* {
+  margin: 0;
+}
+
 body {
   margin: 0;
   display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
 }
 
 h1 {
-  font-size: 3.2em;
+  font-size: 2em;
   line-height: 1.1;
 }
 
